# aglorithms

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/150_cci/: 01.02.cpp  01.03.cpp  01.04.cpp  01.05.cpp  01.06.cpp  01.07.cpp  01.08.cpp  02.01.cpp  02.02.cpp  02.03.cpp  03.01.cpp  03.02.cpp  03.05.cpp  03.06.cpp  04.07.cpp  CMakeLists.txt  c01e02.hpp  c01e03.hpp  c01e04.hpp  c01e05.hpp  c01e06.hpp  c01e07.hpp  c01e08.hpp  c02e01.hpp  c02e02.hpp  c02e03.hpp  c03e01.hpp  c03e02.hpp  c03e03.hpp  c03e05.hpp  c03e06.hpp  c04e07.hpp  flags  matrix.hpp  test_c01.cpp  test_c02.cpp  test_c03.cpp  test_c04.cpp  tmp.cpp  tmp2.cpp  (+2 more)
cpp/algo4/: flags  options  pr.hpp  test.hpp
cpp/algo4/1w2/: deque.hpp  feed_comp_escape.cpp  pr.hpp  randomize_queue.hpp  shuffle.hpp  sort.hpp  stack.hpp  test_deque.cpp  test_pr.cpp  test_shuffle.cpp  test_sort.cpp  test_stack.cpp  test_two_stacks.cpp  two_stack.h  two_stacks.h
cpp/algo4/1w3/: merge_sort.hpp  quick_sort.hpp  test_merge_sort.cpp  test_sort.cpp
cpp/algo4/1w4/: heap.hpp  test_heap.cpp
cpp/algo4/1w6/: sparce_vector.hpp  test_sparce_vector.cpp
cpp/asd/: flags  flags2
cpp/asd/2-sortowanie/: 2.1.hpp  2.2.hpp  2.3.hpp  2.5.hpp  test_2.1.cpp  test_2.2.cpp  test_2.3.cpp  test_2.5.cpp
cpp/bugs/: 01.cpp  02.cpp  03.cpp
cpp/c17-cookbook/: a.out  test_flodExpr.cpp
cpp/cormen/: flags
cpp/cormen/06-heap/: heap.hpp  test_heap.cpp
cpp/cormen/10-elementarne_structury_danych/: 10.3-02.cpp
cpp/cormen/12-bst/: avl_tree.hpp  id_type.hpp  red_black_bst.hpp  storage.hpp  test_avl_tree.cpp  test_storage.cpp  test_tree.cpp  tree.hpp
cpp/cormen/13-rb-bst/: id_type.hpp  rb_bst.hpp  red_black_bst.hpp  storage.hpp  test_tree.cpp  treaps.hpp
cpp/cormen/15-dynamic/: test_cut_rod.cpp  test_longest_common_str.cpp  test_matrix_chain_order.cpp
cpp/cormen/utils/: id_type.hpp  storage.hpp  test_bucket.cpp  test_id_type.cpp  test_matrix.cpp
cpp/crack_interview_6th/: 08.01.cpp  CMakeLists.txt  c06e01.hpp  c08e01.hpp  flags  test_ch6th_ch06.cpp  test_ci6th_ch08.cpp
cpp/dp/: 1.01.cpp  1.06.cpp  1.07.cpp  1.09.cpp  1.12.cpp  4.03.cpp  6.03.cpp  6.04.cpp  7.04.cpp  8.04.cpp  CMakeLists.txt  dpc01e01.hpp  dpc01e06.hpp  dpc01e07.hpp  dpc01e12.hpp  dpc04e02.hpp  dpc05e02.hpp  dpc06e01.hpp  dpc06e03.hpp  dpc06e04.hpp  dpc07e04.hpp  dpc08e04.hpp  dpc08e05.hpp  matrix.hpp  test_dp_ch01.cpp  test_dp_ch02.cpp  test_dp_ch04.cpp  test_dp_ch05.cpp  test_dp_ch06.cpp  test_dp_ch07.cpp  test_dp_ch08.cpp  tmp.cpp
cpp/interview/: CMakeLists.txt
cpp/interview/backpropagation/: CMakeLists.txt
cpp/interview/find_missing/: find_missing.cpp
cpp/jnj/: CMakeLists.txt
cpp/jnj/inc/: account.h  address.h  manager_item.h  message.h  queue_item.h  sec_email.h
cpp/jnj/src/: account.cpp  address.cpp  log_msg.cpp  logger.cpp  manager_item.cpp  sec_email.cpp
cpp/jnj/tests/: address_test.cpp  mananger_test.cpp  sec_email_test.cpp  utils_test.cpp
cpp/jonson_and_jonson/: CMakeLists.txt  tmp.cpp
cpp/jonson_and_jonson/example/: main.cpp
cpp/jonson_and_jonson/inc/: account.h  account_conf.h  address.h  log.h  log_level.h  log_msg.h  logger.h  manager.h  message.h  queue.h  queue_item.h  sec_patterns.h  utils.h
cpp/jonson_and_jonson/src/: .clang-tidy  account.cpp  address.cpp  conf  log_msg.cpp  logger.cpp  manager.cpp  message.cpp  sec_patterns.cpp
cpp/jonson_and_jonson/tests/: account_test.cpp  account_test.h  address_test.cpp  message_test.cpp  queue_test.cpp
cpp/utils/: CMakeLists.txt  bucket.hpp  cmp.hpp  costfun.hpp  flags  id_type.hpp  kth.hpp  matrix.hpp  median.hpp  pr.hpp  scopetimer.hpp  storage.hpp  swap.hpp  test.hpp  test_bucket.cpp  test_id_type.cpp  test_kth.cpp  test_median.cpp  test_pr.cpp  test_storage.cpp
go/data-struct/: test_findMedian.go  test_occurenceCountsInSortedList.go  test_search01.go  test_searchInSortedRottatedList.go  test_separateEvenAndOddNumberInList.go  test_stockPurchesSell.go
java/algo4/1w1/barnsley/: Barnsley.java
java/algo4/1w1/hello/: TestAlgs4.java
java/algo4/1w2/: Deque.java  Permutation.java  Permutation2.java  RandomizedQueue.java  command.txt
java/algo4/1w3/: BruteCollinearPoints.java  FastCollinearPoints.java  MergeSort.java  Point.java  QuickSort.java  command.txt  input20.txt  input6.txt
java/algo4/1w4/: Board.java  Solver.java  commands.txt  puzzle07.txt  puzzle3x3-unsolvable.txt  puzzle4x4-unsolvable.txt
java/algo4/1w5/: KdTree.java  PointSET.java  RedBlackBST.java  SET.java  command.txt
rust/heap/src/: lib.rs
rust/heap/tests/: heap.rs
